# fssp

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile  list_deb.json  main.py  mcp_server.py  pyproject.toml  script1.py
src/: api.py  app.py  config.py  dependencies.py  log.py  middleware.py  schemas.py  service.py
src/application/: __init__.py  fssp_service.py
src/domain/: __init__.py  errors.py  models.py
src/infrastructure/: __init__.py  captcha.py  cli.py  config.py  fssp_client.py  logging.py  parser.py
src/infrastructure/http/: api.py  app.py  dependencies.py  middleware.py
src/infrastructure/http/schemas/: __init__.py
src/infrastructure/mcp/: server.py
tests/: test_config.py  test_parser.py
