[project]
name = "fssp"
version = "0.1.0"
description = "Микросервис для работы с сайтом ФССП"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "2captcha-python>=2.0.2",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.124.0",
    "lxml>=6.0.2",
    "playwright>=1.56.0",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "typer>=0.20.0",
]
